добавлена возможность получать, удалять и создавать виджеты
